See <<after-rollback>> and <<seek-to-current>> for more information.

Error handlers and after rollback processors that extend `FailedRecordProcessor` can now be configured with one or more `RetryListener` s to receive information about retry and recovery progress.

See See <<after-rollback>>, <<seek-to-current>>, and <<recovering-batch-eh>> for more information.

The `RecordInterceptor` now has additional methods called after the listener returns (normally, or by throwing an exception).
In addition, there is now a `BatchInterceptor` for batch listeners.
See <<message-listener-container>> for more information.

[[x27-listener]]
==== `@KafkaListener` Changes

You can now validate the payload parameter of `@KafkaHandler` methods (class-level listeners).
See <<kafka-validation>> for more information.

[[x27-dlt]]
==== `DeadLetterPublishingRecover` Changes

Now, if both the key and value fail deserialization, the original values are published to the DLT.
Previously, the value was populated but the key `DeserializationException` remained in the headers.
There is a breaking API change, if you subclassed the recoverer and overrode the `createProducerRecord` method.

In addition, the recoverer verifies that the partition selected by the destination resolver actually exists before publishing to it.

See <<dead-letters>> for more information.

[[x27-CKTM]]
==== `ChainedKafkaTransactionManager` is Deprecated

See <<transactions>> for more information.

[[x27-RKT]]
==== `ReplyingKafkaTemplate` Changes

There is now a mechanism to examine a reply and fail the future exceptionally if some condition exists.
See <<replying-template>> for more information.

[[x27-streams]]
==== Kafka Streams Changes

By default, the `StreamsBuilderFactoryBean` is now configured to not clean up local state.
See <<streams-config>> for more information.