@@ -105,7 +105,23 @@ include::{kotlin-examples}/topics/Config.kt[tag=brokerProps]
 ----
 ====
 
-IMPORTANT: When using Spring Boot, a `KafkaAdmin` bean is automatically registered so you only need the `NewTopic` `@Bean` s.
+Starting with version 2.7, you can declare multiple `NewTopic` s in a single `KafkaAdmin.NewTopics` bean definition:
+
+====
+[source, java, indent=0, role="primary"]
+.Java
+----
+include::{java-examples}/topics/Config.java[tag=newTopicsBean]
+----
+[source, kotlin, indent=0, role="secondary"]
+.Kotlin
+----
+include::{kotlin-examples}/topics/Config.kt[tag=newTopicsBean]
+----
+====
+
+
+IMPORTANT: When using Spring Boot, a `KafkaAdmin` bean is automatically registered so you only need the `NewTopic` (and/or `NewTopics`) `@Bean` s.
 
 By default, if the broker is not available, a message is logged, but the context continues to load.
 You can programmatically invoke the admin's `initialize()` method to try again later.
@@ -113,6 +129,11 @@ If you wish this condition to be considered fatal, set the admin's `fatalIfBroke
 The context then fails to initialize.
 
 NOTE: If the broker supports it (1.0.0 or higher), the admin increases the number of partitions if it is found that an existing topic has fewer partitions than the `NewTopic.numPartitions`.
+
+Starting with version 2.7, the `KafkaAdmin` provides methods to create and examine topics at runtime.
+
+* `createOrModifyTopics`
+* `describeTopics`
 
 For more advanced features, you can use the `AdminClient` directly.
 The following example shows how to do so:
